Bug 244047 - Ark silently fails to extract files using the unpack buttons shortcuts because of non existent folders
Summary: Ark silently fails to extract files using the unpack buttons shortcuts becaus...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-09 17:18 UTC by Torsten Flammiger
Modified: 2016-03-08 17:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Torsten Flammiger 2010-07-09 17:18:07 UTC
Version:           2.1 (using KDE 4.4.4) 
OS:                Linux

Ark stores a "quick jump list" in the unpack button. This is nice, however: if I delete a folder Ark does not update the list. I can select the non existent folder and Ark silently ignores the error.

Archlinux with KDE 4.4.5 /which I can not select in the list!)
Ark version: 2.14 (which also does not exist in the app drop down list above!)

Reproducible: Always

Steps to Reproduce:
Check if Ark shows noexistend folders in the dropdown-button, select an nonexistend folder and Ark silently ignores that there is no such folder.

Actual Results:  
Nothing!

Expected Results:  
It should update the list and present an error to the user.

OS: Linux (i686) release 2.6.34-ARCH
Compiler: gcc
Comment 1 Raphael Kubo da Costa 2010-12-08 02:19:33 UTC
Changing the default assignee in the currently open Ark bug reports to me.
Comment 2 Elvis Angelaccio 2016-03-08 17:42:28 UTC
Git commit ab7b5188e7191189a4abf5c5c9f1586d8437bc23 by Elvis Angelaccio, on behalf of Chantara Tith.
Committed on 08/03/2016 at 17:24.
Pushed by elvisangelaccio into branch 'master'.

Check if folder exists before adding it to the quick-extract menu
FIXED-IN: 16.04.0

Differential Revision: D1087

M  +4    -2    part/part.cpp

http://commits.kde.org/ark/ab7b5188e7191189a4abf5c5c9f1586d8437bc23