Check if folder exists before adding it to the quick-extract menu

BUG: 244047
FIXED-IN: 16.04.0

Differential Revision: D1087